--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@babel/runtime": "^7.19.0",
     "@biconomy/mexa": "^2.0.32",
     "@ramp-network/ramp-instant-sdk": "^3.0.0",
     "@walletconnect/ethereum-provider": "^1.5.2",
+    "@web3-onboard/coinbase": "^2.1.2",
+    "@web3-onboard/core": "^2.8.3",
+    "@web3-onboard/gnosis": "^2.1.2",
+    "@web3-onboard/injected-wallets": "^2.2.2",
+    "@web3-onboard/walletconnect": "^2.1.2",
     "from-exponential": "^1.1.1",
     "graphql": "^16.3.0",
     "grommet": "^2.22.0",
@@ -20,7 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-minesweeper": "^1.0.2",
-    "react-number-format": "^4.9.3",
+    "react-number-format": "4.9.3",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-swipezor": "^1.0.7",
