Gnosis safe, bug fixes and footer

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "Alluo",
+  "short_name": "Alluo",
   "description": "Deposit crypto or fiat currency and earn yield in the same coin. 100% transparent on-chain investment strategies, withdraw at any time with no fees and no lock-in period",
   "icons": [
     {
