trying node instead of nodemon

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "start": "cd server && yarn start",
+    "start-dev": "yarn run build && (cd server && yarn start)",
     "start-client": "react-scripts start",
     "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
