--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4",
-    "web3": "^1.8.0"
+    "web3": "1.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
