--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-app-rewired": "^2.2.1",
     "react-cookie": "^4.1.1",
     "react-countdown": "^2.3.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-helmet": "^6.1.0",
