--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@web3-onboard/gnosis": "^2.1.2",
     "@web3-onboard/injected-wallets": "^2.2.2",
     "@web3-onboard/walletconnect": "^2.1.2",
+    "crypto-js": "^4.1.1",
+    "ethers": "^5.7.1",
     "from-exponential": "^1.1.1",
     "graphql": "^16.3.0",
     "grommet": "^2.22.0",
@@ -33,6 +35,7 @@
     "react-scripts": "4.0.3",
     "react-swipezor": "^1.0.7",
     "react-tooltip": "^4.2.21",
+    "react-use-intercom": "^2.0.0",
     "react95": "^3.10.0",
     "recoil": "^0.5.2",
     "recoil-persist": "^4.1.0",
