--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.19.0",
     "@biconomy/mexa": "2.0.35",
     "@ramp-network/ramp-instant-sdk": "^3.0.0",
+    "@superfluid-finance/sdk-core": "^0.5.6",
     "@walletconnect/ethereum-provider": "^1.5.2",
     "@web3-onboard/coinbase": "^2.1.2",
     "@web3-onboard/core": "^2.8.3",
