--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grommet": "^2.22.0",
     "invariant": "^2.2.4",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-cookie": "^4.1.1",
