--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
-    "@types/react": "^17.0.38",
+    "@types/jest": "27.4.0",
+    "@types/node": "16.11.21",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
     "@types/xstyled__styled-components": "^1.19.2",
