--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "start": "cd server && yarn start",
     "start-dev": "yarn run build && (cd server && yarn start)",
     "start-client": "react-app-rewired start",
-    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ci": "rm -rf node_modules && yarn install --frozen-lockfile"
