--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "alluo-webapp",
   "version": "2.0.0",
   "private": true,
+  "engines": {
+    "yarn": "1.22.19"
+  },
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@babel/runtime": "^7.19.0",
