--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "private": true,
   "engines": {
-    "yarn": "1.22.19"
+    "yarn": "1.22.19",
+    "node": "18.12.0",
+    "npm": "8.19.2"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
