--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "start": "cd server && yarn start",
     "start-dev": "yarn run build && (cd server && yarn start)",
     "start-client": "react-app-rewired start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ci": "rm -rf node_modules && yarn install --frozen-lockfile"
