--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "scripts": {
     "start": "cd server && yarn start",
     "start-dev": "yarn run build && (cd server && yarn start)",
-    "start-client": "react-app-rewired start",
+    "start-client": "react-app-rewired --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
