--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@biconomy/mexa": "2.0.35",
     "@ramp-network/ramp-instant-sdk": "^3.0.0",
     "@superfluid-finance/sdk-core": "^0.5.6",
+    "@uauth/js": "^2.4.0",
+    "@uauth/web3-onboard": "^2.4.0",
     "@walletconnect/ethereum-provider": "^1.5.2",
     "@web3-onboard/coinbase": "^2.1.2",
-    "@web3-onboard/core": "^2.8.3",
+    "@web3-onboard/core": "^2.10.0",
     "@web3-onboard/gnosis": "^2.1.2",
     "@web3-onboard/injected-wallets": "^2.2.2",
     "@web3-onboard/walletconnect": "^2.1.2",
