--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ethers": "^5.7.1",
     "from-exponential": "^1.1.1",
     "graphql": "^16.3.0",
-    "grommet": "^2.28.0",
+    "grommet": "^2.29.0",
+    "grommet-icons": "^4.8.0",
     "invariant": "^2.2.4",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
