--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@biconomy/mexa": "2.0.35",
     "@ramp-network/ramp-instant-sdk": "^3.0.0",
     "@superfluid-finance/sdk-core": "^0.5.6",
+    "@uniswap/sdk": "^3.0.3",
     "@unstoppabledomains/resolution": "^8.3.3",
     "@unstoppabledomains/tldsresolverkeys": "^2.0.4",
     "@walletconnect/ethereum-provider": "^1.5.2",
