--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "yarn": "1.22.19",
-    "node": "18.12.0",
+    "node": ">=18.12.0",
     "npm": "8.19.2"
   },
   "dependencies": {
